--- a/src/main/resources/static/css/items/work_item.css
+++ b/src/main/resources/static/css/items/work_item.css
@@ -1,6 +1,6 @@
 .item-panel {
-    margin-top: 1%;
-    margin-bottom: 1.5%;
+    margin-top: 15px;
+    margin-bottom: 15px;
     padding: 1%;
     border-radius: 5px;
 }
@@ -30,16 +30,6 @@
 
 .text-output {
     white-space: pre-wrap;
-}
-
-.btn-purple {
-    color: #ffe9ff;
-    background-color: #542678;
-}
-
-.btn-purple:hover {
-    color: rgba(227, 201, 245, 0.82);
-    background-color: rgba(84, 38, 120, 0.87);
 }
 
 form {
