--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -91,8 +91,12 @@
                 <div class="d-flex justify-content-center">
                     <div class="card" style="width: available; justify-content: center">
                         <div class="card-body">
-                            <a style="color: green"><td th:text="${message}">msg</td></a>
-                            <a style="color: red"><td th:text="${error}">err</td></a>
+                            <b th:if="${message}">
+                                <div class="alert alert-success" th:text="${message}">Y</div>
+                            </b>
+                            <b th:if="${error}">
+                                <div class="alert alert-danger" th:text="${error}">Y</div>
+                            </b>
                             <p></p>
 
                             <form action="/auth/login" method="post">
