--- a/src/main/resources/templates/home/my_works.html
+++ b/src/main/resources/templates/home/my_works.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="/css/base/background.css">
     <link rel="stylesheet" type="text/css" href="/css/base/main_panel.css">
     <link rel="stylesheet" type="text/css" href="/css/base/nav.css">
+    <link rel="stylesheet" type="text/css" href="/css/input/links.css">
+    <link rel="stylesheet" type="text/css" href="/css/input/buttons.css">
     <link rel="stylesheet" type="text/css" href="/css/items/work_item.css">
     <!-- Script to load navbar -->
     <!--<script src="js/csi.js"></script>-->
@@ -95,8 +97,9 @@
         <div class="main-panel main-panel-light" style="padding: 1%">
             <div class="container">
                 <b th:if="${error}">
-                    <a style="color: red"><td th:text="#{error.something_went_wrong}">err</td></a>
+                    <div class="alert alert-danger" th:text="#{error.something_went_wrong}">Y</div>
                 </b>
+
                 <div class="row">
                     <div class="col-sm-10">
                         <h2 th:text="#{dropdown.works}" style="margin-top: 1%">Cat</h2>
@@ -109,6 +112,7 @@
                 </div>
             </div>
             <div class="container-fluid">
+                <!-- WORKS -->
                 <th:block th:if="${myWorks != null}">
                     <th:block th:if="${myWorks.size() > 0}">
                         <div th:each="work : ${myWorks}">
@@ -116,7 +120,7 @@
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-sm-11">
-                                            <form th:id="'open_work_form' + ${work.getName()}" th:action="'/works/view/' + ${work.getName()}" method="get">
+                                            <form th:id="'open_work_form' + ${work.getName()} + ${myWorks.indexOf(work)}" th:action="'/works/view/' + ${work.getName()}" method="get">
                                                 <h4 style="font-weight: bold">
                                                     <a class="link link-large" onclick="document.getElementById(this.parentNode.parentNode.id).submit(); return false;"
                                                        th:text="${work.getName()}">submit</a>
@@ -169,12 +173,12 @@
                                             <div class="work-element" style="display: flex; ">
                                                 <label for="chapters" th:text="#{home.works.chapters} + ':'">F</label>
                                                 <div class="column" style="margin-left:2%;">
-                                                    <form id="add_chapter_form" th:action="'/home/works/' + ${work.getName()} + '/add'" method="get">
-                                                        <a class="link" onclick="document.getElementById('add_chapter_form').submit(); return false;"
+                                                    <form th:id="'add_chapter_form' + ${work.getName()}" th:action="'/home/works/' + ${work.getName()} + '/add'" method="get">
+                                                        <a class="link" onclick="document.getElementById(this.parentNode.id).submit(); return false;"
                                                            th:text="#{home.works.add_chapter}">submit</a>
                                                     </form>
                                                     <div class="row" id="chapters" th:each="chapter : ${work.getChapters()}" style="margin-left: 1%; width: max-content">
-                                                        <form th:id="'show_chapter_form' + ${work.getChapters().indexOf(chapter)}"
+                                                        <form th:id="'show_chapter_form' + ${work.getName()} + '/' + ${chapter}"
                                                               th:action="'/works/view/' + ${work.getName()} + '/' + ${chapter}" method="get">
                                                             <a class="link" style="margin-right: 2%;"
                                                                onclick="document.getElementById(this.parentNode.id).submit(); return false;"
@@ -182,7 +186,7 @@
                                                                 S
                                                             </a>
                                                         </form>
-                                                        <form th:id="'edit_chapter_form' + ${work.getChapters().indexOf(chapter)}"
+                                                        <form th:id="'edit_chapter_form' + ${work.getName()} + '/' + ${chapter}"
                                                               th:action="'/home/works/' + ${work.getName()} + '/' + ${chapter} + '/edit'" method="get">
                                                             <a class="link" onclick="document.getElementById(this.parentNode.id).submit(); return false;">
                                                                 <svg width="15px" height="15px" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -191,7 +195,7 @@
                                                                 </svg>
                                                             </a>
                                                         </form>
-                                                        <form th:id="'delete_chapter_form' + ${work.getChapters().indexOf(chapter)}"
+                                                        <form th:id="'delete_chapter_form' + ${work.getName()} + '/' + ${chapter}"
                                                               th:action="'/home/works/' + ${work.getName()} + '/' + ${chapter} + '/delete'" method="post">
                                                             <a class="link" onclick="return formSubmitter(this.parentNode.id)">
                                                                 <svg width="15px" height="15px" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -209,7 +213,7 @@
                                             </p>
                                         </div>
                                         <div class="col-sm-1">
-                                            <form th:id="'edit_work_form' + ${myWorks.indexOf(work)}"
+                                            <form th:id="'edit_work_form' + ${work.getName()} + ${myWorks.indexOf(work)}"
                                                   th:action="'/home/works/' + ${work.getName()} + '/edit'" method="get">
                                                 <a class="link" onclick="document.getElementById(this.parentNode.id).submit(); return false;">
                                                     <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +222,7 @@
                                                     </svg>
                                                 </a>
                                             </form>
-                                            <form th:id="'delete_work_form' + ${myWorks.indexOf(work)}"
+                                            <form th:id="'delete_work_form' + ${work.getName()} + ${myWorks.indexOf(work)}"
                                                   th:action="'/home/works/' + ${work.getName()} + '/delete'" method="post">
                                                 <a class="link" onclick="return formSubmitter(this.parentNode.id)">
                                                     <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -237,6 +241,23 @@
                     <p></p>
                     <p th:text="#{list.work.my_works.empty}">No tags</p>
                 </th:block>
+                <!-- PAGES -->
+                <div class="container-fluid" style="display: inline">
+                    <th:block th:if="${prevPage != null}">
+                        <a th:href="'/home/works/' + ${prevPage}">
+                            <button class="btn btn-purple" th:text="#{list.chapters.prev}">B</button>
+                        </a>
+                    </th:block>
+                    <th:block th:if="${curPage!= null}">
+                        <label style="font-weight: normal"
+                               th:text="#{list.page.page} + ' ' + ${curPage} + ' ' + #{list.page.of} + ' ' + ${pageCount}">L</label>
+                    </th:block>
+                    <th:block th:if="${nextPage != null}">
+                        <a th:href="'/home/works/' + ${nextPage}">
+                            <button class="btn btn-purple" th:text="#{list.chapters.next}">B</button>
+                        </a>
+                    </th:block>
+                </div>
             </div>
             <input type="hidden" id="question" th:value="#{home.delete.question}">
         </div>
