--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title th:text="#{navbar.home}">Title</title>
     <!-- For bootstrap -->
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="/css/base/background.css">
     <link rel="stylesheet" type="text/css" href="/css/base/main_panel.css">
     <link rel="stylesheet" type="text/css" href="/css/base/nav.css">
+    <link rel="stylesheet" type="text/css" href="/css/input/links.css">
+    <link rel="stylesheet" type="text/css" href="/css/items/work_item.css">
     <!-- Script to load navbar -->
     <!--<script src="js/csi.js"></script>-->
 
@@ -92,25 +94,185 @@
        <!-- Main panel -->
        <!-- ---------- -->
        <div class="container">
-           <div class="main-panel main-panel-light">
+           <div class="main-panel main-panel-light" style="padding: 1%">
+               <b th:if="${error}">
+                   <div class="alert alert-danger" th:text="#{error.something_went_wrong}">Y</div>
+               </b>
+
                <div class="container" style="padding-top: 10px">
                    <h2>Full search</h2>
                    <p>Тот самый полнотекстовый поиск</p>
                </div>
-               <div class="container" style="padding-top: 10px">
-                   <h2>Топ-5(10) самых популярных работ</h2>
-                   <p>Внизу ссылка на все работы с сортировкой по популярности</p>
-                   <p class="link link-light"><a href="#">Та самая ссылка</a></p>
-               </div>
-               <div class="container" style="padding-top: 10px; padding-bottom: 10px">
-                   <h2>Топ-5(10) самых новых работ</h2>
+               <!-- MOST POPULAR -->
+               <div class="container">
+                   <h2 th:text="#{mainpage.top.popular}">Топ-5(10) самых новых работ</h2>
                    <p>Внизу ссылка на все работы с сортировкой по дате добавления</p>
-                   <p class="link link-light"><a href="#">Та самая ссылка</a></p>
+                   <p class="link link-light link-medium"><a href="#" th:text="#{mainpage.top.popular.all}">Та самая ссылка</a></p>
                </div>
+               <!-- MOST RECENT -->
+               <div class="container-fluid" style="padding-bottom: 10px">
+                   <h2 th:text="#{mainpage.top.update}">Топ-5 самых популярных работ</h2>
+                   <th:block th:if="${topWorksByUpdate != null}">
+                       <th:block th:if="${topWorksByUpdate.size() > 0}">
+                           <div th:each="work : ${topWorksByUpdate}">
+                               <div class="item-panel item-panel-light">
+                                   <div class="container-fluid">
+                                       <div class="row">
+                                           <div class="col-sm-11">
+                                               <form th:id="'open_work_form' + ${work.getName()} + ${topWorksByUpdate.indexOf(work)}" th:action="'/works/view/' + ${work.getName()}" method="get">
+                                                   <h4 style="font-weight: bold">
+                                                       <a class="link link-large" onclick="document.getElementById(this.parentNode.parentNode.id).submit(); return false;"
+                                                          th:text="${work.getName()}">submit</a>
+                                                   </h4>
+                                               </form>
+                                               <p class="work-element" style="margin-top: -0.5%; margin-bottom: -1%">
+                                                   <label for="author" th:text="#{work.author} + ':'">F</label>
+                                                   <a th:text="${work.getAuthorName()}" id="author">Type</a>
+                                               </p>
+                                               <p class="work-element" style="margin-bottom: -1%">
+                                                   <label th:text="#{work.category.types.fandom} + ':'">F</label>
+                                                   <th:block th:if="${work.getFandomType().equals('ORIGINAL')}">
+                                                       <a th:text="#{work.category.types.original}"
+                                                          data-toggle="tooltip" data-placement="top" th:title="#{'work.category.types.' + ${work.getFandomType().toLowerCase()}}">Type</a>
+                                                   </th:block>
+                                                   <th:block th:unless="${work.getFandomType().equals('ORIGINAL')}">
+                                                       <a th:each="fandom : ${work.getFandoms()}"
+                                                          data-toggle="tooltip" data-placement="top" th:title="#{'work.category.types.' + ${fandom.getType().toLowerCase()}}">
+                                                           <th:block th:text="${fandom.getName()}">T</th:block>
+                                                       </a>
+                                                   </th:block>
+                                               </p>
+                                               <th:block th:if="${work.getTags().size() > 0}">
+                                                   <p class="work-element" style="margin-bottom: -1%">
+                                                       <label th:text="#{work.tags} + ':'">F</label>
+                                                       <a th:each="tag : ${work.getTags()}">
+                                                           <a th:text="${tag}">Tag</a>
+                                                       </a>
+                                                   </p>
+                                               </th:block>
+                                               <p class="work-element" style="margin-bottom: -1%">
+                                                   <label for="category" th:text="#{work.category}">F</label>
+                                                   <a th:text="#{'work.category.' + ${work.getCategory().toLowerCase()}}" id="category">Type</a>
+                                               </p>
+                                               <p class="work-element" style="margin-bottom: -1%">
+                                                   <label for="rating" th:text="#{work.rating}">F</label>
+                                                   <a th:text="${work.getRating()}" id="rating"
+                                                      data-toggle="tooltip" data-placement="right" th:title="#{'work.rating.' + ${work.getRating().toLowerCase()}}">
+                                                   </a>
+                                               </p>
+                                               <p class="work-element" style="margin-bottom: -1%">
+                                                   <label for="status" th:text="#{work.state}">F</label>
+                                                   <th:block th:if="${work.getStatus().equals('IN_PROGRESS')}">
+                                                       <a th:text="#{work.state.in_progress}" id="status" style="color: red">Type</a>
+                                                   </th:block>
+                                                   <th:block th:if="${work.getStatus().equals('COMPLETE')}">
+                                                       <a th:text="#{work.state.complete}" id="status" style="color: green;">Type</a>
+                                                   </th:block>
+                                               </p>
+                                               <p class="work-element" style="margin-bottom: -1%">
+                                                   <label for="language" th:text="#{profile.language.label} + ':'">F</label>
+                                                   <a th:text="#{'profile.language.' + ${work.getLanguage().toLowerCase()}}" id="language">Type</a>
+                                               </p>
+                                               <div class="work-element" style="display: flex; ">
+                                                   <div sec:authorize="hasAuthority('ADMIN')">
+                                                       <label for="chapters" th:text="#{home.works.chapters} + ':'">F</label>
+                                                       <div class="column" style="margin-left:2%;">
+                                                           <form th:id="'add_chapter_form' + ${work.getName()}" th:action="'/home/works/' + ${work.getName()} + '/add'" method="get">
+                                                               <a class="link" onclick="document.getElementById(this.parentNode.id).submit(); return false;"
+                                                                  th:text="#{home.works.add_chapter}">submit</a>
+                                                           </form>
+                                                           <div class="row" id="chapters" th:each="chapter : ${work.getChapters()}" style="margin-left: 1%; width: max-content">
+                                                               <form th:id="'show_chapter_form' + ${work.getName()} + '/' + ${chapter}"
+                                                                     th:action="'/works/view/' + ${work.getName()} + '/' + ${chapter}" method="get">
+                                                                   <a class="link" style="margin-right: 2%;"
+                                                                      onclick="document.getElementById(this.parentNode.id).submit(); return false;"
+                                                                      th:text="${chapter}">
+                                                                       S
+                                                                   </a>
+                                                               </form>
+                                                               <form th:id="'edit_chapter_form' + ${work.getName()} + '/' + ${chapter}"
+                                                                     th:action="'/home/works/' + ${work.getName()} + '/' + ${chapter} + '/edit'" method="get">
+                                                                   <a class="link" onclick="document.getElementById(this.parentNode.id).submit(); return false;">
+                                                                       <svg width="15px" height="15px" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                                           <path fill-rule="evenodd" d="M11.293 1.293a1 1 0 0 1 1.414 0l2 2a1 1 0 0 1 0 1.414l-9 9a1 1 0 0 1-.39.242l-3 1a1 1 0 0 1-1.266-1.265l1-3a1 1 0 0 1 .242-.391l9-9zM12 2l2 2-9 9-3 1 1-3 9-9z"/>
+                                                                           <path fill-rule="evenodd" d="M12.146 6.354l-2.5-2.5.708-.708 2.5 2.5-.707.708zM3 10v.5a.5.5 0 0 0 .5.5H4v.5a.5.5 0 0 0 .5.5H5v.5a.5.5 0 0 0 .5.5H6v-1.5a.5.5 0 0 0-.5-.5H5v-.5a.5.5 0 0 0-.5-.5H3z"/>
+                                                                       </svg>
+                                                                   </a>
+                                                               </form>
+                                                               <form th:id="'delete_chapter_form' + ${work.getName()} + '/' + ${chapter}"
+                                                                     th:action="'/home/works/' + ${work.getName()} + '/' + ${chapter} + '/delete'" method="post">
+                                                                   <a class="link" onclick="return formSubmitter(this.parentNode.id)">
+                                                                       <svg width="15px" height="15px" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                                           <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
+                                                                       </svg>
+                                                                   </a>
+                                                               </form>
+                                                           </div>
+                                                       </div>
+                                                   </div>
+                                                   <div sec:authorize="hasAuthority('USER')">
+                                                       <label for="size" th:text="#{work.size} + ':'">F</label>
+                                                       <label th:text="#{work.size.chapters} + ': ' + ${work.getChapters().size()} + ', ' + #{work.size.words} + ': ' + ${work.getWordsCount()}"
+                                                              id="size" style="font-weight: normal">Type</label>
+                                                   </div>
+                                               </div>
+                                               <p class="work-element text-element">
+                                               <p th:text="${work.getDescription()}" class="text-output" id="description">
+                                                   Type
+                                               </p>
+                                               </p>
+                                           </div>
+                                           <div class="col-sm-1">
+                                               <div sec:authorize="hasAuthority('ADMIN')">
+                                                   <form th:id="'edit_work_form' + ${topWorksByUpdate.indexOf(work)} + ${topWorksByUpdate.indexOf(work)}"
+                                                         th:action="'/home/works/' + ${work.getName()} + '/edit'" method="get">
+                                                       <a class="link" onclick="document.getElementById(this.parentNode.id).submit(); return false;">
+                                                           <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                               <path fill-rule="evenodd" d="M11.293 1.293a1 1 0 0 1 1.414 0l2 2a1 1 0 0 1 0 1.414l-9 9a1 1 0 0 1-.39.242l-3 1a1 1 0 0 1-1.266-1.265l1-3a1 1 0 0 1 .242-.391l9-9zM12 2l2 2-9 9-3 1 1-3 9-9z"/>
+                                                               <path fill-rule="evenodd" d="M12.146 6.354l-2.5-2.5.708-.708 2.5 2.5-.707.708zM3 10v.5a.5.5 0 0 0 .5.5H4v.5a.5.5 0 0 0 .5.5H5v.5a.5.5 0 0 0 .5.5H6v-1.5a.5.5 0 0 0-.5-.5H5v-.5a.5.5 0 0 0-.5-.5H3z"/>
+                                                           </svg>
+                                                       </a>
+                                                   </form>
+                                                   <form th:id="'delete_work_form' + ${topWorksByUpdate.indexOf(work)} + ${topWorksByUpdate.indexOf(work)}"
+                                                         th:action="'/home/works/' + ${work.getName()} + '/delete'" method="post">
+                                                       <a class="link" onclick="return formSubmitter(this.parentNode.id)">
+                                                           <svg width="20px" height="20px" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                               <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
+                                                           </svg>
+                                                       </a>
+                                                   </form>
+                                               </div>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                           </div>
+                       </th:block>
+                   </th:block>
+                   <th:block th:if="${topWorksByUpdate == null || topWorksByUpdate.size() <= 0}">
+                       <p></p>
+                       <p class="link-medium" th:text="#{list.work.empty}">No tags</p>
+                   </th:block>
+                   <th:block th:if="${worksCount > 5}">
+                       <p> </p>
+                       <p class="link link-light link-medium"><a href="#" th:text="#{mainpage.top.update.all}">Та самая ссылка</a></p>
+                   </th:block>
+               </div>
+               <input type="hidden" id="question" th:value="#{home.delete.question}">
            </div>
        </div>
    </div>
 </body>
+
+<script>
+    function formSubmitter(formName) {
+        if (confirm(document.getElementById('question').value)) {
+            document.getElementById(formName).submit(); return false;
+        } else {
+            return false;
+        }
+    }
+</script>
 
 <!-- For bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
