--- a/src/main/resources/templates/rules.html
+++ b/src/main/resources/templates/rules.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="/css/base/background.css">
     <link rel="stylesheet" type="text/css" href="/css/base/main_panel.css">
     <link rel="stylesheet" type="text/css" href="/css/base/nav.css">
+    <link rel="stylesheet" type="text/css" href="/css/input/links.css">
     <!-- Script to load navbar -->
     <!--<script src="js/csi.js"></script>-->
 
