--- a/src/main/resources/templates/work/fandoms_by_type.html
+++ b/src/main/resources/templates/work/fandoms_by_type.html
@@ -94,6 +94,10 @@
     <div class="container">
         <div class="main-panel main-panel-light">
             <div class="container-fluid" style="padding-top: 10px">
+                <b th:if="${error}">
+                    <div class="alert alert-danger" th:text="#{error.something_went_wrong}">Y</div>
+                </b>
+
                 <h2 th:text="${fandomType}">Cat</h2>
                 <th:block th:if="${fandoms != null}">
                     <th:block th:if="${fandoms.size() > 0}">
