--- a/src/main/resources/templates/work/work_view.html
+++ b/src/main/resources/templates/work/work_view.html
@@ -27,28 +27,10 @@
     <link rel="stylesheet" type="text/css" href="/css/items/work_item.css">
     <link rel="stylesheet" type="text/css" href="/css/items/comment_item.css">
     <!-- Scripts -->
-    <!--<script src="/js/app.js"></script>-->
     <script src="/js/moment.min.js"></script>
+    <script src="/js/app.js"></script>
 
     <meta charset="UTF-8">
-
-    <script>
-        var stompClient = null;
-
-        function connect(workName, chapterName) {
-            var socket = new SockJS('/gs-guide-websocket');
-            stompClient = Stomp.over(socket);
-            stompClient.connect({}, function (frame) {
-                console.log('Connected: ' + frame);
-                //var subscribePostfix = '/works/view/' + workName + '/' + chapterName;
-                var subscribePostfix = '/works/view/' + workName + '?';
-                //console.log('subscribe postfix: ' + subscribePostfix);
-                stompClient.subscribe(subscribePostfix, function (comment) {
-                    showComment(comment)
-                });
-            });
-        }
-    </script>
 </head>
 <body>
 <div class="bg">
@@ -134,9 +116,20 @@
                             <div class="col-sm-6">
                                 <h3 th:text="${viewedWork.getName()}" style="margin-top: -0.01%; font-weight: bold">L</h3>
                                 <p class="work-element" style="margin-top: -0.5%; margin-bottom: -1%">
-                                    <label for="fandom" th:text="#{home.add_fic.type.fandom} + ':'">F</label>
+                                    <label for="category" th:text="#{work.author} + ':'">F</label>
+                                    <a th:text="${viewedWork.getAuthorName()}" id="author">Type</a>
+                                </p>
+                                <p class="work-element" style="margin-bottom: -1%">
+                                    <label th:text="#{work.category.types.fandom} + ':'">F</label>
                                     <th:block th:if="${viewedWork.getFandomType().equals('ORIGINAL')}">
-                                        <a th:text="#{work.category.types.original}" id="fandom">Type</a>
+                                        <a th:text="#{work.category.types.original}"
+                                           data-toggle="tooltip" data-placement="top" th:title="#{'work.category.types.' + ${viewedWork.getFandomType().toLowerCase()}}">Type</a>
+                                    </th:block>
+                                    <th:block th:unless="${viewedWork.getFandomType().equals('ORIGINAL')}">
+                                        <a th:each="fandom : ${viewedWork.getFandoms()}"
+                                           data-toggle="tooltip" data-placement="top" th:title="#{'work.category.types.' + ${fandom.getType().toLowerCase()}}">
+                                            <th:block th:text="${fandom.getName()}">T</th:block>
+                                        </a>
                                     </th:block>
                                 </p>
                                 <p class="work-element" style="margin-bottom: -1%">
@@ -227,7 +220,46 @@
                 <th:block th:if="${viewedWork.getChapters().size() == 1}">
                     <div class="item-panel item-panel-light">
                         <div class="container-fluid">
-                            <h4 th:text="#{comment.comments} + ':'" style="font-weight: bold">H</h4>
+                            <h3 th:text="#{comment.comments} + ':'" style="font-weight: bold">H</h3>
+
+                            <th:block th:if="${viewedWork.getChapters().get(0).getComments().size() == 0}">
+                                <p id="noComments" th:text="#{comment.comments.empty}">C</p>
+                            </th:block>
+
+                            <th:block th:unless="${viewedWork.getChapters().get(0).getComments().size() == 0}">
+                                <div class="comment-item" th:each="comment : ${viewedWork.getChapters().get(0).getComments()}"
+                                     th:id="'comment_' + ${comment.getId()}">
+                                    <div class="container-fluid">
+                                        <div class="comment-head">
+                                            <div class="row" style="padding-left: 5px">
+                                                <div class="col-sm-7 primary-text"
+                                                     th:text="${comment.getAuthorName()}">f</div>
+                                                <div class="col-sm-4 secondary-text"
+                                                     th:text="${#dates.format(new java.util.Date(comment.getPostTime()), 'dd.MM.YYYY HH:mm:ss')}"></div>
+                                                <div class="col-sm-1">
+                                                    <span class="secondary-text close" th:id="'span_' + ${comment.getId()}"
+                                                          style="float: right"
+                                                          sec:authorize="isAuthenticated()">X</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <script th:id="'s_' + ${comment.getId()}">
+                                            var commentId = document.currentScript.id.substr(2);
+                                            console.log(commentId);
+                                            var spanElement = document.getElementById('span_' + commentId);
+                                            spanElement.addEventListener("click", function () {
+                                                var commentId = this.id.substr(5);
+                                                deleteComment(commentId);
+                                            });
+                                        </script>
+                                        <div class="comment-body text-output" th:text="${comment.getText()}">f</div>
+                                    </div>
+                                </div>
+                            </th:block>
+
+                            <div id="newComments">
+                            </div>
+
                             <div sec:authorize="isAuthenticated()">
                                 <form id="post_comment_form" style="width: 100%">
                                     <div class="container-fluid comment-panel">
@@ -256,14 +288,15 @@
                                         </div>
 
                                         <input type="hidden" id="workName" th:value="${viewedWork.getName()}">
-                                        <input type="hidden" id="chapterCount" th:value="${viewedWork.getChapters().size()}">
+                                        <input type="hidden" id="chapterCount" th:value="1">
                                         <input type="hidden" id="chapterName" th:value="${viewedWork.getChapters().get(0).getName()}">
                                     </div>
                                 </form>
                                 <script>
                                     var workName = document.getElementById('workName').value;
                                     var chapterName = document.getElementById('chapterName').value;
-                                    connect(workName, chapterName);
+                                    var stompClient = null;
+                                    stompClient = connect(stompClient, workName, '');
 
                                     $("form").on('submit', function (e) {
                                         e.preventDefault();
@@ -272,100 +305,19 @@
                                     $( "#saveComment" ).click(function() {
                                         sendCommentToDB();
                                     });
-
-                                    function sendCommentToDB() {
-                                        var commentText = $("#comment").val();
-                                        if (commentText === '') {
-                                            document.getElementById('emptyCommentAlert').style.display = "";
-                                            return;
-                                        } else {
-                                            document.getElementById('comment').value = "";
-                                            document.getElementById('commentCounter').value = "1000";
-                                        }
-
-                                        stompClient.send("/dst/comment", {}, JSON.stringify({
-                                                'workName': $("#workName").val(),
-                                                'chapterName': $("#chapterName").val(),
-                                                'chapterCount': $("#chapterCount").val(),
-                                                'commentText': commentText
-                                            }
-                                        ));
-                                    }
-
-                                    function showComment(comment) {
-                                        //console.log('comment body: ' + comment);
-                                        if (comment != null) {
-                                            $("#newComments").append(createNewComment(JSON.parse(comment.body).id,
-                                                                                    JSON.parse(comment.body).authorName,
-                                                                                    JSON.parse(comment.body).postTime,
-                                                                                    JSON.parse(comment.body).text));
-                                            if (document.getElementById('noComments') !== null) {
-                                                document.getElementById('noComments').style.display = "none";
-                                            }
-                                        } else {
-                                            $("#newComments").append("<p>NULL COMMENT RECEIVED</p>");
-                                        }
-                                    }
-
-                                    function createNewComment(commentId, authorName, postTime, commentText) {
-                                        var mainItem = document.createElement("DIV");
-                                        mainItem.id = 'comment_' + commentId;
-                                        mainItem.setAttribute("class", "comment-item");
-                                        var container = document.createElement("DIV");
-                                        container.setAttribute("class", "container-fluid");
-                                        var headDiv = document.createElement("DIV");
-                                        headDiv.setAttribute("class", "comment-head");
-                                        var rowDiv = document.createElement("DIV");
-                                        rowDiv.setAttribute("class", "row");
-                                        var authorNameDiv = document.createElement("DIV");
-                                        authorNameDiv.setAttribute("class", "col-sm-6 primary-text");
-                                        authorNameDiv.textContent = authorName;
-                                        var dateTimeDiv = document.createElement("DIV");
-                                        dateTimeDiv.setAttribute("class", "col-sm-6 secondary-text");
-                                        dateTimeDiv.style.float = "right";
-                                        dateTimeDiv.textContent = moment(postTime).format('DD.MM.YYYY HH:mm:ss');
-                                        var commentBodyDiv = document.createElement("DIV");
-                                        commentBodyDiv.setAttribute("class", "comment-body");
-                                        commentBodyDiv.textContent = commentText;
-
-                                        rowDiv.appendChild(authorNameDiv);
-                                        rowDiv.appendChild(dateTimeDiv);
-
-                                        headDiv.appendChild(rowDiv);
-
-                                        container.appendChild(headDiv);
-                                        container.appendChild(commentBodyDiv);
-
-                                        mainItem.appendChild(container);
-                                        return mainItem;
-                                    }
                                 </script>
                             </div>
 
-                            <div id="newComments">
-                            </div>
-
-                            <th:block th:if="${viewedWork.getChapters().get(0).getComments().size() == 0}">
-                                <p id="noComments" th:text="#{comment.comments.empty}">C</p>
-                            </th:block>
-
-                            <th:block th:unless="${viewedWork.getChapters().get(0).getComments().size() == 0}">
-                                <div class="comment-item" th:each="comment : ${viewedWork.getChapters().get(0).getComments()}">
-                                    <div class="container-fluid">
-                                        <div class="comment-head">
-                                            <div class="row">
-                                                <div class="col-sm-6 primary-text" style=""
-                                                     th:text="${comment.getAuthorName()}">f</div>
-                                                <div class="col-sm-6 secondary-text" style="float: right"
-                                                     th:text="${#dates.format(new java.util.Date(comment.getPostTime()), 'dd.MM.YYYY HH:mm:ss')}">f</div>
-                                            </div>
-                                        </div>
-                                        <div class="comment-body" th:text="${comment.getText()}">f</div>
-                                    </div>
-                                </div>
-                            </th:block>
                         </div>
                     </div>
+                </th:block>
+                <th:block th:if="${viewedWork.getChapters().size() > 1}">
+                    <!-- LATER I'LL DO REVIEWS I PROMISE -->
+                    <!--<div class="item-panel item-panel-light">
+                        <div class="container-fluid">
+                            <h4 th:text="#{comment.comments} + ':'" style="font-weight: bold">H</h4>
+                        </div>
+                    </div>-->
                 </th:block>
             </th:block>
         </div>
