sizes descreased a bit

--- a/src/main/resources/templates/home/add_chapter.html
+++ b/src/main/resources/templates/home/add_chapter.html
@@ -112,12 +112,12 @@
                             <div class="form-group">
                                 <label for="chapterText" th:text="#{home.add_chapter.text}">Username</label>
                                 <textarea class="form-control textarea-big" id="chapterText" name="chapterText"
-                                          cols="20" maxlength="67108864" required
-                                          onkeyup="textCounter(this, 'chapterTextCounter', 67108864)"
+                                          cols="20" maxlength="45000" required
+                                          onkeyup="textCounter(this, 'chapterTextCounter', 45000)"
                                           oninput="auto_grow(this)"></textarea>
                                 <label for="chapterTextCounter" th:text="#{signup.characters_left}"
                                        style="font-weight: normal">Left</label>
-                                <input disabled  maxlength="9" size="9" value="67108864" id="chapterTextCounter">
+                                <input disabled  maxlength="9" size="9" value="45000" id="chapterTextCounter">
                             </div>
 
                             <fieldset class="form-group">
