commit for commit

--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -24,6 +24,7 @@
     <!-- ---------- -->
     <!-- Navbar -->
     <!-- ---------- -->
+    lol
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
